# Proyecto5_Regression_Equipo1

./: README.md  app.py  app_J.py  pyproject.toml
.streamlit/: config.toml
assets/: history.json  niu.json
notebooks/: 01_eda_student.ipynb  01_eda_student_g.ipynb  02_entrenamiento_modelo.ipynb  02_entrenamiento_modelo_g.ipynb  Multiple.ipynb  horas_estudio_sueno_I.ipynb  notebook_unificado.ipynb  student_perfomance_regression.ipynb  student_perfomance_regression_J.ipynb  student_perfomance_regression_m.ipynb
reports/: EDA_REPORT.md
